--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="assets/main.css">
   </head>
   <body>
-    <section class="textos">
-      <div >Laboratoria</div>
+    <section >
+      <div class="textos">Laboratoria</div>
       <div id="rojo">es</div>
-      <div >TRANSFORMACION</div>
+      <div class="textos">TRANSFORMACION</div>
     </section>
   </body>
 </html>
